--- a/pom.xml
+++ b/pom.xml
@@ -46,7 +46,7 @@
                         <!-- Usage: mvn clean javafx:run -->
                         <id>default-cli</id>
                         <configuration>
-                            <mainClass>com.r4ppz.App</mainClass>
+                            <mainClass>com.r4ppz.Main</mainClass>
                         </configuration>
                     </execution>
                 </executions>
